aks/rest_api_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: rest-api-ingress
  namespace: rest-api
spec:
  rules:
    - host: rest-api.test.ogfg.link
      http:
        paths:
          - backend:
              serviceName: rest-api
              servicePort: 80
            path: /health-check
